# w25n512gv

./: .gitignore  Cargo.toml  toolchain.toml
.github/workflows/: main.yml
basic_example/: Cargo.toml  memory.x
basic_example/.cargo/: config.toml
basic_example/src/: main.rs
src/: lib.rs
